fix extension overlapping

--- a/less/common/sideNav.less
+++ b/less/common/sideNav.less
@@ -7,7 +7,6 @@
   .sideNav {
     & when (@config-right-sidebar = true) {
       margin-right: 0px;
-      margin-left: 50px;
 
       &.TagsPage-nav {
         margin-left: 0;
